argo/networkpolicy-argocd-application-controller.yaml
# Source: argocd
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  labels:
    app.kubernetes.io/name: argocd-application-controller
    app.kubernetes.io/instance: argocd
    app.kubernetes.io/component: application-controller
    app.kubernetes.io/part-of: argocd
    app.kubernetes.io/version: v3.5.1
  name: argocd-application-controller
  namespace: argo
  annotations:
    noa.re/deploy-id: ed85da0dd5c363d0
spec:
  ingress:
  - from:
    - namespaceSelector: {}
    ports:
    - port: metrics
  podSelector:
    matchLabels:
      app.kubernetes.io/name: argocd-application-controller
      app.kubernetes.io/instance: argocd
  policyTypes:
  - Ingress
